frontend/k8s/deploymenet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: my-namespace
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: boukheroukmohamed/frontend:latest 
        ports:
        - containerPort: 3000
