frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-namespace
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000       # External access port
    targetPort: 3000 # Port exposed by the container
  type: NodePort # ClusterIP for Internal access; change to NodePort for direct external access if needed
